--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,9 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.facebook.fresco:fresco:1.8.1'
+    implementation 'com.github.nkzawa:socket.io-client:0.3.0'
 
     implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
