--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     // or, for latest rc, use "1.1.1-rc1"
     implementation "android.arch.persistence.room:runtime:1.1.1"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
 
@@ -45,8 +46,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha04'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.facebook.fresco:fresco:1.12.1'
+    implementation 'com.facebook.fresco:fresco:1.13.0'
     implementation 'com.github.nkzawa:socket.io-client:0.3.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     testImplementation 'junit:junit:4.12'
 }
