--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,12 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-feature android:name="android.hardware.camera" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:name=".ApplicationProject"
         android:allowBackup="true"
@@ -19,7 +25,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activities.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBarTranslucent"></activity>
+            android:theme="@style/AppTheme.NoActionBarTranslucent" />
         <activity android:name=".ui.activities.ProfileActivity" />
         <activity
             android:name=".ui.activities.DetailMessageActivity"
@@ -37,7 +43,7 @@
         <activity
             android:name=".ui.activities.ProfileScrollingActivity"
             android:label="@string/title_activity_profile_scrolling"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
