Add: feature view bigger profile picture

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,11 @@ buildscript {
     
     repositories {
         google()
+        mavenCentral()
         jcenter()
+        maven {
+            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
@@ -19,6 +23,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            //url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
+            url 'https://jitpack.io'
+        }
     }
 }
 
