--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "techo.apps.isi.uca.com.android_aps"
-        minSdkVersion 21
+        minSdkVersion 22
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -25,32 +25,29 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     // or, for latest rc, use "1.1.1-rc1"
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation(group: 'com.tumblr', name: 'remember', version: '1.0.0', ext: 'aar')
-
+    androidTestImplementation 'android.arch.persistence.room:testing:1.1.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.tumblr:remember:1.0.0@aar'
     //dagger implementation
     implementation 'com.google.dagger:dagger:2.11'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
     //butter knife implementation
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
-
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-
-    implementation 'com.google.android.material:material:1.1.0-alpha04'
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.facebook.fresco:fresco:1.13.0'
     implementation 'com.github.nkzawa:socket.io-client:0.3.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
     testImplementation 'junit:junit:4.12'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
